# VPTQ

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  SUPPORT.md  _config.yml  algo-environment.yml  algorithm.md  debug.ipynb  eval.py  format.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_build.sh  run_quant.py  run_vptq.py  setup.py  test.sh
.github/workflows/: clang-format.yml  publish.yml  ruff.yml
.github/workflows/scripts/: build.sh
cmake/: generic.cmake
csrc/: CMakeLists.txt  common.h  config.cuh  cuda_utils.cuh  dequant.cu  dequant.cuh  dequant.h  dequant_impl_packed.cu  dispatch_macros.h  ops.cc  quant_gemv.cu  quant_gemv.cuh  quant_gemv.h  quant_gemv_v2.cu  quant_gemv_v2.cuh  utils.cuh
csrc/copy/: copy.cuh  copy_traits.cuh  mod.cuh  sync.cuh
csrc/kernels/: convert.cuh  decode.cuh  dequant.cuh  layout.cuh  math.cuh  quant_gemv.cuh  quant_gemv_traits.cuh  quant_gemv_v2.cuh  reduce.cuh
csrc/kernels/copy/: atom.cuh  copy.cuh  copy_traits.cuh  global_to_shared.cuh  mod.cuh  sync.cuh  vectorized.cuh  warp.cuh
csrc/util/: common.h  config.cuh  convert.cuh  copy.cuh  cuda_utils.cuh  debug.cuh  dispatch_macros.h  math_utils.h
documents/: deepseek.md  example_count_r.md
notebooks/: vptq_example.ipynb  vptq_hf_example.ipynb
scripts/: clang_format.hook  format.sh
tests/: test_generation.py  test_quant_gemv.py
tests/ops/: run.sh  test_gemm.py  test_quant_gemm.py  test_quant_gemv.py
tools/: absorb_perm.py  analysis_log.py  collect_k_v.py  convert_finetune_weights_to_hf_packed_weight.py  eval.py  fake_quant.py  merge.py  merge_outlier.py
vptq/: __init__.py  __main__.py  app.py  app_gpu.py  app_utils.py  layer_quantizer.py  quantize_executer.py  quantizer.py  vptq.py
vptq/ist/: model_base.py  qlinear.py  utils.py
vptq/layers/: __init__.py  model_base.py  utils.py  vqlinear.py
vptq/models/: llama.py  mistral.py  nvembed.py  phi.py  qwen.py
vptq/ops/: __init__.py  gemm.py  quant_gemm.py
vptq/tests/: test_generation.py
vptq/tests/ops/: test_quant_gemm.py  test_quant_gemv.py
vptq/tools/: pre_process.py
vptq/utils/: config.py  data.py  hessian.py  layer_utils.py  pack.py  reshape.py  sign.py
