[project]
name = "vptq"
version = "0.0.5"
authors = [
  { name="Ying Cao", email="lcy.seso@gmail.com" },
  { name="Jicheng Wen", email="wejoincy@gmail.com" },
  { name="Yang Wang", email="wyatuestc@gmail.com" },
]

description = "VPTQ (Vector Post-Training Quantization) is a novel Post-Training Quantization method."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
 # NOTE: setuptools's `install_requires` can overwritten in
 # `pyproject.toml`'s `dependencies` field.
 # Make sure to keep this field in sync with what is in `requirements.txt`.
dependencies = [
    "torch",
    "datasets",
    "transformers>=4.45",
    "safetensors",
    "psutil",
    "accelerate",
    "gradio",
    "plotly==5.9.0",
    "pynvml",
]

[project.urls]
Homepage = "https://github.com/microsoft/VPTQ"
Issues = "https://github.com/microsoft/VPTQ/issues"

[build-system]
requires = [
    "cmake",
    "packaging",
    "setuptools >= 64.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Allow lines to be as long as 80.
line-length = 80
exclude = [
    # External file, leaving license intact
]
include = ["*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.yapf]
column_limit = 80
indent_width = 4
based_on_style = "google"
split_before_logical_operator = false
dedent_closing_brackets = true
coalesce_brackets = true

[tool.codespell]
ignore-words-list = "ist"
skip = "./VPTQ_arxiv.pdf,./build"

[tool.isort]
use_parentheses = true
skip_gitignore = true
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
ensure_newline_before_comments = true

# ignore pdf files
[tool.setuptools]
packages.find.exclude = ["**/*.pdf"]
